# peter-hook

./: .gitignore  .release-notes-v0.3.0.md  .release-notes-v0.4.0.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TEST_IMPROVEMENTS.md  TODO.md  clippy.toml  deny.toml  docs.md  final-test.toml  hooks.toml  install.sh  justfile  rust-toolchain.toml  rustfmt.toml  test-advanced.toml  test-convenience.toml  test-file-hooks.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deps.yml  release.yml
docs/: Makefile  architecture.rst  cli.rst  conf.py  configuration.rst  dependencies.rst  development.rst  examples.rst  file_targeting.rst  git_integration.rst  global_config.rst  index.rst  installation.rst  justfile  linting.md  overview.rst  quickstart.rst  templating.rst
examples/: advanced-features.toml  file-targeting.toml  hooks-with-imports.toml  hooks.lib.toml  parallel-hooks.toml
scripts/: release.sh
src/: completions.rs  debug.rs  doctor.rs  lib.rs  main.rs  update.rs
src/cli/: mod.rs
src/config/: global.rs  mod.rs  parser.rs  templating.rs
src/git/: changes.rs  installer.rs  lint.rs  mod.rs  repository.rs  worktree.rs
src/hooks/: dependencies.rs  executor.rs  hierarchical.rs  mod.rs  resolver.rs
src/output/: mod.rs
tests/: cli_integration_tests.rs  cli_structure_tests.rs  config_global_tests.rs  doctor_comprehensive_tests.rs  doctor_network_mocked_tests.rs  doctor_tests.rs  executor_comprehensive_tests.rs  git_changes_tests.rs  git_lint_tests.rs  git_repository_tests.rs  hierarchical_comprehensive_tests.rs  installer_comprehensive_tests.rs  main_comprehensive_final_tests.rs  main_config_advanced_tests.rs  main_config_tests.rs  main_exhaustive_tests.rs  main_install_advanced_tests.rs  main_install_tests.rs  main_lint_advanced_tests.rs  main_lint_tests.rs  main_list_advanced_tests.rs  main_list_tests.rs  main_run_advanced_tests.rs  main_run_comprehensive_tests.rs  main_run_tests.rs  main_uninstall_tests.rs  main_validate_advanced_tests.rs  main_validate_tests.rs  main_worktree_tests.rs  output_comprehensive_tests.rs  resolver_comprehensive_tests.rs  update_comprehensive_tests.rs  update_network_mocked_tests.rs  update_tests.rs  worktree_tests.rs
tests/fixtures/: hooks.toml
