[package]
name = "peter-hook"
version = "0.4.0"
edition = "2021"
authors = ["Peter Hook Contributors"]
description = "A hierarchical git hooks manager for monorepos"
license = "CC0-1.0"
repository = "https://github.com/example/peter-hook"
keywords = ["git", "hooks", "monorepo", "development", "cli"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
 toml = "0.8"
 clap = { version = "4.5", features = ["derive"] }
 walkdir = "2.5"
 anyhow = "1.0"
 glob = "0.3"
 atty = "0.2"
 once_cell = "1.20"
 indicatif = "0.17"
 console = "0.15"
 git2 = { version = "0.19", default-features = false }
 serde_json = "1.0"



[dev-dependencies]
tempfile = "3.13"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple-crate-versions = "allow"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
