[package]
name = "peter-hook"
version = "3.1.1"
edition = "2024"
rust-version = "1.86.0"
authors = ["Peter Hook Contributors"]
description = "A hierarchical git hooks manager for monorepos"
license = "MIT"
repository = "https://github.com/example/peter-hook"
keywords = ["git", "hooks", "monorepo", "development", "cli"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
 toml = "0.9"
 clap = { version = "4.5", features = ["derive"] }
 clap_complete = "4.5"
 anyhow = "1.0"
 glob = "0.3"
 once_cell = "1.20"
 indicatif = "0.17"
 console = "0.15"
 git2 = { version = "0.19", default-features = false }
 serde_json = "1.0"
 dirs = "5.0"
 shellexpand = "3.1"
 reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
 hex = "0.4"
 sha2 = "0.10"
 tempfile = "3.0"
 flate2 = "1.0"
 tar = "0.4"



[dev-dependencies]
assert_cmd = "2.0"
mockito = "1.5"
serial_test = "3.0"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple-crate-versions = "allow"
literal-string-with-formatting-args = "allow"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
